# sicp

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  MASTER_SLICE_BACKLOG.md  Makefile  Makefile.bak-Sx05-2c  Makefile.bak-Sx07-D-20260526-150737  Makefile.bak.pre-t05-v2  README.md  Sx08-H_BE_clarify_pick_fix.patch  Sx08-H_state0-header.patch  Sx08-H_state0-v2.patch  apply-Sx05-2-batch-1.py  apply-Sx05-2-batch-2.py  apply-Sx05-2-batch-3.py  apply-Sx08-D-batch-Q.py  command.txt  coverage.floors.json  makefile-append-v2.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  tsconfig.base.json  verify_icon_map.sh
.backup-Sx04-8b-fix-variant-degraded-211043/: intent-stream.ts  searching_by_text.py
.backup-Sx04-8b/20260524-205522/: ai.client.ts  error.dto.ts  intent-request.dto.ts
.bak-Sx04-9a-20260524-231904/: molecules-index.ts
.claude/commands/: icp-claude-coder.md  icp-claude-planner.md
.github/workflows/: ci.yml  guards.yml
apps/ai/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/ai/src/: main.py  main.py.bak-Sx04-12-race  main.py.bak-Sx05-2b  main.py.bak-Sx08-D  main.py.bak-batch4-20260529-115326  main.py.bak-d1-20260530-012611  state.py  state.py.bak-C-S09-AK  state.py.bak-Sx05-2a  state.py.bak-Sx08-D  state.py.bak-batch3-20260529-115019
apps/ai/src/graphs/: __init__.py  router_graph.py
apps/ai/src/graphs/intents/: __init__.py  __init__.py.bak-Sx07-D-20260526-150737  analyzing_by_voices.py  analyzing_by_voices.py.bak-batch5-20260529-115727  buying_by_voices.py  buying_by_voices.py.bak-Sx08-D-Q  buying_by_voices.py.bak-Sx08-D-R  buying_by_voices.py.bak-Sx08-D-S  buying_by_voices.py.bak-Sx08-D-U  cart_by_text.py  importing_by_images.py  importing_by_images.py.bak-batch8b-20260529-132541  recommend_by_images.py  recommend_by_images.py.bak-C-S09-AE  recommend_by_images.py.bak-C-S09-AJ  recommend_by_images.py.bak-C-S09-AM  searching_by_text.py  searching_by_text.py.bak-Sx04-12-empty  searching_by_text.py.bak-Sx04-12-price  searching_by_text.py.bak-Sx08-D7-20260528-161809
apps/ai/src/observability/: logger.py  metrics.py  setup.py
apps/ai/src/prompts/: __init__.py  cart_promo_typo.txt  cart_stock_replacement_reason.txt  classify_analyze_intent.txt  detect_typo.txt  generate_description.txt  generate_reasons.txt  generate_understanding.txt.bak-Sx08-D7-20260528-161809  narrate_reasoning.txt  parse_filters.txt  parse_voice_intent.txt  parse_voice_intent.txt.bak-recommend-20260530-091337  reason_need.txt  recommend_attach_reason.txt  recommend_attach_reason.txt.bak-C-S09-AL  recommend_co_purchase_hint.txt  recommend_query_desc.txt  voice_no_match_reason.txt
apps/ai/src/tools/: __init__.py  llm_client.py  llm_client.py.bak-Sx04-12-timeout  llm_pricing.py  mcp_client.py  redis_publisher.py  redis_publisher.py.bak-Sx07-D-20260526-150737
apps/ai/tests/: smoke_analyzing.py  test_t01c_price_solver_identity.py  test_t03a_tenant_propagation.py  test_t03b_llm_trace.py  test_t03c_metrics.py
apps/gateway/: .eslintrc.cjs  Dockerfile  package.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
apps/mcp/: .dockerignore  Dockerfile  pyproject.toml  pyproject.toml.bak-Sx08-D-V
apps/mcp/scripts/: backfill_vespa_tenant.py
apps/mcp/src/: db.py  server.py
apps/mcp/src/fixtures/: gtrends-mock.json
apps/mcp/src/observability/: __init__.py  logger.py  setup.py
apps/mcp/src/tools/: __init__.py  __init__.py.bak-Sx05-2a  __init__.py.bak-Sx07-D-20260526-150737  analytics.py  analytics.py.bak-batch2b-20260529-103018  analytics.py.bak-batch2b-20260529-104224  analytics.py.bak-batch3-20260529-115019  cards.py  cart.py  events.py  gtrends.py  policies.py  products.py  shopee.py  speech.py  speech.py.bak-Sx08-D-V  traces.py  vespa.py  vespa.py.bak-C-S09-V  vespa.py.bak-Sx04-12-price  vespa.py.bak-Sx04-12-shape  vespa_helpers.py  vision.py
apps/mcp/tests/: call_tools_smoke.py  call_tools_smoke.py.bak-fixassert  test_reasoning_engine.py  test_t03b_enforcement.py  test_t03b_traces_append.py  test_t05_stock_atomic.py  test_tenant_helpers.py  test_vespa_tenant.py
apps/web/: .gitignore  Dockerfile  Dockerfile.bak-proxy-20260529-151140  middleware.ts  next.config.js  next.config.js.bak-Sx04-12-prod  next.config.js.bak-proxy-20260529-151140  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/workers/: .eslintrc.cjs  Dockerfile  package.json  tsconfig.json  vitest.config.ts
docs/: 00_CONTEXT.md  AI_ARCHITECTURE_v6.md  FACTS.md  ICP_PLAYBOOK_V2.2.md  ICP_WEB_PLAN.md  ICP_WORKFLOW_V2_WORKING.md  INVENTORY_2026-06-13.md  LOG_CATALOG.md  MASTER_BACKLOG.md  MASTER_SLICE_BACKLOG.md  RUNBOOK_SECRETS.md  decisions-log.md
docs/ai-delivery/: TASK_OPERATING_SYSTEM.md
docs/archive-v1/: 00_CONTEXT.md  03_API_CONTRACTS.md  04_INTENT_SPECS.md  MASTER_ROADMAP.md  MASTER_SLICE_BACKLOG.md  README.md
docs/decisions/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md  ADR-014.md  ADR-015.md  ADR-016.md  ADR-017.md  ADR-018.md  ADR-019.md  ADR-020.md  ADR-021.md  ADR-022.md  ADR-023.md  ADR-024.md  ADR-025.md  ADR-031.md  ADR-032.md  ADR-033.md  ADR-034.md  ADR-035.md  ADR-036.md  ADR-037.md  ADR-038.md  ADR-039.md  ADR-040.md  ADR-041.md  ADR-042.md  (+16 more)
icp-source/: Makefile  package.json
icp-source/apps/ai/: pyproject.toml
icp-source/apps/ai/src/: __init__.py
icp-source/apps/ai/src/graphs/: __init__.py
icp-source/apps/ai/src/observability/: __init__.py  setup.py
infra/: docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml
scripts/: backfill-image-descriptions.ts  backfill-image-descriptions.ts.bak-C-S09-AA  backfill-image-descriptions.ts.bak-C-S09-XY  backfill-image-descriptions.ts.bak-body  backfill-image-descriptions.ts.bak-endpoint  check-coverage.mjs  gate-tenant-routes.sh  gen-facts.sh  seed-historical-orders.ts  seed-historical-orders.ts.bak-C-S09-AD  seed-product-images.ts  seed-product-images.ts.bak-C-S09-Z  smoke-live.sh
(+733 files in other folders)
