# =============================================================================
# apps/ai/pyproject.toml — ICP AI Orchestration service (S-04 T02 amended)
# =============================================================================
# Phase 1 baseline emit (T03 Phiên 24): Flask + LangGraph 0.2.x router scaffold.
#
# S-04 T02 amendment (Phiên Sx04-5 emit per D-S04-13 LAW + D-S04-14 LAW):
#   ADD 4 NEW deps for foundational interrupt+resume + progressive streaming:
#     - langgraph-checkpoint-redis>=0.1,<0.2  (D-S04-13 Pattern A — RedisSaver)
#     - redis>=5.0,<6.0                       (D-S04-13 Option Z — async pub/sub
#                                              + RedisSaver transitive dep)
#     - google-generativeai>=0.7,<1.0         (D-S04-14 Q-Sx04-4-2 LAW — Gemini
#                                              gemini-1.5-flash PRIMARY LLM)
#     - openai>=1.30,<2.0                     (D-S04-14 Q-Sx04-4-2 LAW — OpenAI
#                                              gpt-4o-mini FALLBACK LLM)
#
# Verified Phiên Sx04-3 audit Q-Sx04-3-3:
#   - pip download langgraph==0.2.76 + langgraph-checkpoint-redis==0.1.3 PASS no
#     conflict; namespace import `from langgraph.checkpoint.redis import RedisSaver`
#     works after install
#   - langgraph-checkpoint-redis 0.1.3 metadata requires:
#       langgraph-checkpoint (>=2.0.21,<3.0.0) + orjson (>=3.9.0,<4.0.0) +
#       redis (>=5.2.1,<7.0.0) + redisvl (>=0.5.1,<1.0.0)
#   - Installs cleanly alongside langgraph 0.2.76 (which requires
#     langgraph-checkpoint >=2.0.10,<3.0.0)
#
# Reference:
#   - slices/S-04_decisions-log.md D-S04-13 LAW (Pattern A + Option Z + Pattern P2
#     + Strategy β)
#   - slices/S-04_decisions-log.md D-S04-14 LAW (Sync HTTP MCP + Gemini Primary +
#     Per-product product_ready + Paired telemetry)
#   - docs/phases/PHASE_02_AUTH_SEARCH.md §C deps list
# =============================================================================

[project]
name = "icp-ai"
version = "0.0.1"
description = "ICP AI orchestration service — Flask + LangGraph router + OTel."
requires-python = ">=3.11,<3.13"
dependencies = [
    # --- Web framework ---
    "flask>=3.0,<4.0",
    "werkzeug>=3.0,<4.0",          # Flask transitive — pin family
    # --- LangGraph + LangChain core ---
    "langgraph>=0.2,<0.3",
    "langchain-core>=0.3,<0.4",    # LangGraph 0.2.x transitive
    # --- S-04 T02 NEW: RedisSaver checkpointer (D-S04-13 Pattern A) ---
    "langgraph-checkpoint-redis>=0.1,<0.2",
    # --- S-04 T02 NEW: Redis async client (D-S04-13 Option Z pub/sub + RedisSaver) ---
    "redis>=5.0,<6.0",
    # --- S-04 T02 NEW: Gemini PRIMARY LLM (D-S04-14 Q-Sx04-4-2 LAW) ---
    "google-generativeai>=0.7,<1.0",
    # --- S-04 T02 NEW: OpenAI FALLBACK LLM (D-S04-14 Q-Sx04-4-2 LAW) ---
    "openai>=1.30,<2.0",
    # --- Logging + validation ---
    "structlog>=24.1,<25.0",
    "pydantic>=2.6,<3.0",
    # --- HTTP client (MCP JSON-RPC + AI internal /resume forwarding) ---
    "httpx>=0.27,<0.28",
    # --- OpenTelemetry Python SDK ---
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27,<2.0",
    "opentelemetry-instrumentation-flask>=0.48b0,<1.0",
    "opentelemetry-instrumentation-httpx>=0.48b0,<1.0",
    "opentelemetry-distro>=0.48b0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

# S-P0-03/T01 (W-76): pytest collection failed (`ModuleNotFoundError: src.*`)
# because tests/ has no __init__ and there was no pytest config → rootdir (CWD =
# apps/ai) was never put on sys.path. pythonpath=["."] makes `from src.* import`
# resolve when pytest runs from apps/ai. asyncio_mode=auto: tests use
# pytest-asyncio without per-test markers.
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
