# =============================================================================
# apps/mcp/pyproject.toml — ICP MCP Tool Server (T04 — C-21 fix Phiên 25)
# =============================================================================
# Replaces T04 first emit (Phiên 25). C-21 bug: original used
# package-dir + packages.find combo → pip install editable reported success but
# `mcp` module not importable (top_level.txt empty/wrong).
#
# Fix: Mirror T03 apps/ai/pyproject.toml pattern exactly (verified working
# Phiên 24, 12/12 ACs PASS):
#   - where=["."], include=["src", "src.*"]
#   - NO package-dir rename
#   - Import path: `src.server`, `src.tools`, `src.observability`
#
# Reference:
#   - docs/phases/PHASE_01_INFRA.md Day 5 (MCP server scope)
#   - docs/specs/03_API_CONTRACTS.md §5 (MCP tool specs LOCKED)
#   - apps/ai/pyproject.toml (T03 working pattern — Phiên 24)
#   - slices/S-02_decisions-log.md C-21 (Phiên 25 amendment)
# =============================================================================

[project]
name = "icp-mcp"
version = "0.0.1"
description = "ICP MCP Tool Server — JSON-RPC 2.0 over HTTP with OTel auto-instrumentation. 3 first tools: auth.verify_jwt, events.append, products.get."
requires-python = ">=3.11,<3.13"
dependencies = [
    # --- Web framework (mirror T03) ---
    "flask>=3.0,<4.0",
    "werkzeug>=3.0,<4.0",

    # --- Logging + validation (mirror T03) ---
    "structlog>=24.1,<25.0",
    "pydantic>=2.6,<3.0",

    # --- Data layer (T04-specific: Postgres + Redis) ---
    "psycopg[binary]>=3.2,<4.0",
    "redis>=5.0,<6.0",

    # --- OpenTelemetry Python SDK (mirror T03 pin range >=1.27,<2.0) ---
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27,<2.0",
    "opentelemetry-instrumentation-flask>=0.48b0,<1.0",
    "opentelemetry-instrumentation-psycopg>=0.48b0,<1.0",
    "opentelemetry-instrumentation-requests>=0.48b0,<1.0",
    "opentelemetry-distro>=0.48b0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.4,<1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# C-21 fix: mirror T03 exactly. Treats `src/` itself as package (anti-pattern
# but works because Flask CLI + Python -m can resolve `src.module:object`).
[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
